--- a/src/components/displayTile/displayTile.scss
+++ b/src/components/displayTile/displayTile.scss
@@ -7,6 +7,17 @@
     border-style:groove;
     cursor: pointer;
     border-radius: 10%;
+    @media (max-width:600px) {
+        
+        
+        transform:rotateX(0deg);
+        margin: 5% auto;
+    
+        top:0;
+        left:0;
+        position: static;
+        justify-content: center;
+    }
 }
 .bgTileImg{   
     cursor: pointer;
@@ -29,7 +40,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .topic{
-    color:#120078;
+    color:#023e7d;
    position: relative;
    font-size: 5vw;
     font-family: 'Share Tech Mono', monospace;
@@ -39,13 +50,21 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     left:-3.5vw;
     top:1.5vw;
     opacity: 0.5;
-    
+    @media (max-width:600px) {
+		left:0;
+        top:0;
+        opacity: 0.5;
+	}
 }
 .hoverrightdown{
     top:1.5vw;
     left: 3.5vw;
     opacity: 0.5;
-    
+    @media (max-width:600px) {
+		left:0;
+        top:0;
+        opacity: 0.5;
+	}
 }
 
 
@@ -54,11 +73,20 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     left:-3.5vw;
     top:-1.5vw;
     opacity: 0.5;
-    
+    @media (max-width:600px) {
+		left:0;
+        top:0;
+        opacity: 0.5;
+	}
+
 }
 .hoverrightup{
     top: -1.5vw;
     left: 3.5vw;
     opacity: 0.5;
-    
+    @media (max-width:600px) {
+		left:0;
+        top:0;
+        opacity: 0.5;
+	}
 }
