--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 .homepage {
 	background-image: url("../../assets/4.jpg");
+	color:#001233;
 	height: 100%;
 	width: 100%;
 	margin-left: auto;
@@ -14,6 +15,11 @@
 	justify-content: center;
 	opacity: 0.15;
 	animation: bgZoomAnim 10s linear infinite;
+	@media (max-width:600px) {
+		overflow: visible;
+		background-size: cover;
+		
+	}
 }
 .bgZoomAnim {
 	@keyframes bgZoomAnim {
@@ -35,7 +41,7 @@
 .glassEffect {
 	background: rgba(255, 255, 255, 0.15);
 	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-	backdrop-filter: blur(5.5px);
+	backdrop-filter: blur(2px);
 	-webkit-backdrop-filter: blur(5.5px);
 	border-radius: 10px;
 	border: 1px solid rgba(255, 255, 255, 0.18);
@@ -44,6 +50,11 @@
 	margin-left: 10%;
 	margin-top: 3vw;
     position: fixed;
+	@media (max-width:600px) {
+		overflow: visible;
+		height: 85%;
+		
+	}
 }
 .heading {
 	animation: blinkAlign 4s linear infinite;
@@ -52,22 +63,33 @@
 	left: 16%;
 	padding: 4% 4%;
 	font-family: 'Share Tech Mono', monospace;
-	color: #120078;
+	color: #023e7d;
 	// margin : 5% auto;
 	// top:1vw;
 	font-size: 3.5vw;
 	font-weight: bold;
-	opacity: 200%;
+	opacity: 1;
+	@media (max-width:600px) {
+		position: relative;
+		display: block;
+		font-size: 3vw;
+		
+	}
 }
 .headingAnimation1 {
+
 	animation: blink 4s linear infinite;
 }
 
 .headingAnimation2 {
+	color:#560bad;
 	position: relative;
 	left: -20%;
 	animation: blink 4s linear infinite;
 	animation-delay: -2s;
+	@media (max-width:600px) {
+		left:-18%;
+	}
 }
 .blinkAlign {
 	@keyframes blinkAlign {
@@ -76,12 +98,17 @@
 		}
 		49% {
 			left: 20%;
+			color:#023e7d;
 		}
 		50% {
 			left: 16%;
+			color:#560bad;
+	
 		}
 		99% {
 			left: 16%;
+			color:#560bad;
+	
 		}
 		100% {
 			left: 20%;
@@ -142,4 +169,10 @@
 	top: 5vw;
 	left: 37.5%;
 	position: relative;
+	
+	@media (max-width:600px) {
+		// position: absolute;
+		height: 30%;
+		width: 30%;
+	}
 }
